add design link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <a class="nav-link" href="https://folukecancode-projects.stackblitz.io">Projects</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Designs</a>
+      <a class="nav-link" href="https://folukecancode-designs.stackblitz.io">Designs</a>
     </li>
      <li class="nav-item">
       <a class="nav-link" href="#">Hire Me 🥺</a>
