--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <a class="nav-link" href="https://folukecancode-designs.stackblitz.io">Designs</a>
     </li>
      <li class="nav-item">
-      <a class="nav-link" href="#">Hire Me 🥺</a>
+      <a class="nav-link" href="https://hireme.stackblitz.io/">Hire Me 🥺</a>
     </li>
   </ul>
 </nav>
